--- a/styles/index.css
+++ b/styles/index.css
@@ -578,20 +578,13 @@ section.split-row .row-half {
           flex-direction: column;
 }
 
-div.split-row .row-half.master,
-section.split-row .row-half.master {
+div.split-row .row-half.master, div.split-row .row-half.wider-master,
+section.split-row .row-half.master,
+section.split-row .row-half.wider-master {
   width: 100%;
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
-}
-
-div.split-row .row-half.wider-master,
-section.split-row .row-half.wider-master {
-  width: 100%;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
 }
 
 div.split-row .row-half .row-contents,
@@ -691,6 +684,12 @@ section.split-row.reverse {
   div.split-row .row-half,
   section.split-row .row-half {
     padding: 0 2rem;
+  }
+  div.split-row .row-half.wider-master,
+  section.split-row .row-half.wider-master {
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
   }
 }
 
@@ -841,6 +840,12 @@ section.split-row.reverse {
           justify-content: center;
 }
 
+@media screen and (min-width: 760px) {
+  #banner-container .banner {
+    background-size: 110% 110%;
+  }
+}
+
 #banner-container .banner-text {
   padding: 1.5rem;
   text-align: center;
@@ -972,13 +977,13 @@ main {
   overflow: hidden;
 }
 
-#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-position, #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="0"] {
+#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="0"] {
   background-size: cover;
   background-position: center;
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="0"] {
-  background-image: url(/assets/banner.png);
+  background-image: url(/assets/home_banner_1.png);
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container {
@@ -1035,7 +1040,8 @@ main {
     max-width: 50%;
   }
   #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide .banner-slide-description-container .banner-slide-description .leading-text {
-    font-size: 3.5rem !important;
+    font-size: 3rem !important;
+    font-weight: bold;
   }
   #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide .banner-slide-description-container .banner-slide-description .tagline {
     font-size: 1.4rem;
@@ -1146,10 +1152,11 @@ main {
   border: 1px solid #F0EFEF;
   margin: 1rem;
   cursor: pointer;
+  border-radius: 50%;
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slide-controls-container #banner-slide-controls .slide-dot.selected {
-  background: #E99F1E;
+  background: #C8102E;
 }
 
 #about-us-section {
