--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -111,14 +111,10 @@ section.split-row {
     display: flex;
     flex-direction: column;
 
-    &.master {
-      width: 100%;
-      flex: 2;
-    }
-
+    &.master,
     &.wider-master {
       width: 100%;
-      flex: 3;
+      flex: 2;
     }
 
     .row-contents {
@@ -165,15 +161,15 @@ section.split-row {
       order: 2;
       text-align: left;
       align-items: center;
-
-      // &.master {
-      //   flex: 1;
-      // }
     }
-
+    
     .row-half {
       padding: 0 1rem;
       width: 50%;
+   
+      // &.master {
+      //   flex: 1;
+      // }
     }
   }
   
@@ -182,6 +178,10 @@ section.split-row {
 
     .row-half {
       padding: 0 2rem;
+
+      &.wider-master {
+        flex: 3;
+      }
     }
   }
 }
@@ -311,6 +311,10 @@ section.split-row {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include minWidth($breakpoint-tablet) {
+      background-size: 110% 110%;
+    }
   }
 
   .banner-text {
