--- a/styles/_tabs.scss
+++ b/styles/_tabs.scss
@@ -1,7 +1,11 @@
+[data-tab] {
+  cursor: pointer;
+}
+
 [data-tab-target] {
   display: none;
 
   &.selected {
-    display: initial;
+    display: block;
   }
 }
