--- a/styles/about.scss
+++ b/styles/about.scss
@@ -39,13 +39,24 @@
 
   #about-tab-details {
     // background: black;
+    
+    .about-image {
+      width: 100%;
+      height: 250px;
+      background-image: url(/assets/about_banner.jpg);
+      background-size: cover;
+      background-position: center;
+    }
 
-    [data-about-tab-details] {
-      // line-height: 1.8;
-      display: none;
+    .header-text {
+      padding: 2rem 0 0 0;
+      font-weight: bold;
+      color: $primary-color;
+    }
 
-      &.selected {
-        display: block;
+    .details-paragraph {
+      p {
+        padding: 0.8rem 0;
       }
     }
   }
