--- a/styles/index.scss
+++ b/styles/index.scss
@@ -29,14 +29,14 @@ main {
       height: 100%;
       overflow: hidden;
   
-      .banner-position {
+      %banner-position {
         background-size: cover;
         background-position: center;
       }
 
       [data-slide="0"] {
-        @extend .banner-position;
-        background-image: url(/assets/banner.png);
+        @extend %banner-position;
+        background-image: url(/assets/home_banner_1.png);
       }
 
       .banner-slide-container {
@@ -72,7 +72,8 @@ main {
   
               .banner-slide-description {
                 .leading-text {
-                  font-size: 3.5rem !important;
+                  font-size: 3rem !important;
+                  font-weight: bold;
                 }
         
                 .tagline {
@@ -159,9 +160,10 @@ main {
           border: 1px solid $gray-bg;
           margin: 1rem;
           cursor: pointer;
+          border-radius: 50%;
   
           &.selected  {
-            background: #E99F1E;
+            background: $secondary-color;
           }
         }
       }
