--- a/styles/application.css
+++ b/styles/application.css
@@ -945,6 +945,16 @@ section.split-row.reverse {
   }
 }
 
+.nav-item img {
+  height: 20px;
+  width: 20px;
+}
+
+.nav-item img.reverse {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 [data-tab] {
   cursor: pointer;
 }
