--- a/styles/index.scss
+++ b/styles/index.scss
@@ -181,8 +181,6 @@ main {
 }
 
 #beneficiaries-section {
-  background: $transluscent-white;
-
   .beneficiaries-list {
     display: flex;
     justify-content: center;
@@ -272,6 +270,93 @@ main {
 
     .master {
       flex: 3;
+    }
+  }
+}
+
+#updates-section {
+  align-items: flex-start;
+
+  .left {
+    overflow: hidden;
+
+    .updates-navigation {
+      width: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+
+    .updates-container {
+      display: flex;
+      width: 100%;
+
+      .update-details {
+        $img-width: 15rem;
+
+        margin-right: 20px;
+        width: 70vw;
+        min-width: 70vw;
+        border: 1px solid $primary-color;
+        border-radius: 4px;
+
+        @include minWidth($breakpoint-tablet) {
+          width: $img-width;
+          min-width: $img-width;
+        }
+
+        .update-image {
+          width: 100%;
+          height: $img-width;
+          background-image: url(/assets/update_image.png);
+          background-size: cover;
+          background-position: center;
+        }
+
+        .update-text {
+          padding: 1rem;
+          text-align: left;
+
+          .update-title {
+            font-weight: bold;
+            font-size: 1.2rem;
+            padding-bottom: 1rem;
+          }
+          
+          .update-subtext {
+            font-size: small;
+
+          }
+        }
+
+        .read-more {
+          font-size: smaller;
+          text-align: right;
+        }
+      }
+    }
+
+    @include minWidth($breakpoint-tablet) {
+      width: 70%;
+    }
+  }
+
+  .right {
+    align-items: center;
+
+    .medium-text {
+      font-size: 1.2rem;
+    }
+
+    .read-more {
+      font-size: smaller;
+      text-align: right;
+    }
+
+    @include minWidth($breakpoint-tablet) {
+      align-items: flex-start;
+      width: 30%;
     }
   }
 }
@@ -420,4 +505,8 @@ main {
       left: 22rem;
     }
   }
+}
+
+.solid-bg {
+  background: $transluscent-white;
 }
