--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -277,6 +277,7 @@ section.split-row {
     border: 1px solid #EEEEEE;
   
     .form-tagline {
+      font-size: 1.35rem;
       line-height: 1.5;
     }
 
