--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -44,7 +44,9 @@ footer {
     }
 
     .logo {
-      width: 100%;
+      img {
+        height: 6rem;
+      }
     }
 
     .footer-links-section {
