--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -360,18 +360,20 @@ section.split-row {
   }
   
   .mask {
-    padding-top: 9rem;
+    // padding-top: 9rem;
     width: 100%;
     height: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   
     @include minWidth($breakpoint-tablet) {
-      padding: 10rem 0 0 0;
+      // padding: 10rem 0 0 0;
     }
   
     @include minWidth($breakpoint-desktop) {
-      display: flex;
-      padding: 6.7rem 0 0 0;
+      // padding: 6.7rem 0 0 0;
     }
   
     .mask-close {
