--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -298,6 +298,14 @@ header {
               cursor: pointer;
             }
           }
+
+          #close-modal {
+            text-align: right;
+
+            &::after {
+              content: "(x)";
+            }
+          }
         }
       }
     }
