--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,14 +17,6 @@ header {
       @include minWidth($breakpoint-desktop) {
         background: transparent;
         color: white;
-
-        // img.default-logo {
-        //   display: none !important;
-        // }
-  
-        // img.white-logo {
-        //   display: block !important;
-        // }
       }
     }
 
@@ -35,14 +27,13 @@ header {
     #top-strip {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       width: 100%;
       padding: 2rem 0;
 
       #logo {
         width: 50%;
         height: auto;
-        // padding: 1.5rem 0;
         position: relative;
 
         .main{
@@ -61,7 +52,7 @@ header {
         }
 
         img {
-          height: 5rem;
+          height: 7rem;
           width: auto;
         }
 
@@ -100,7 +91,7 @@ header {
           // padding: 1.2rem 0 1.5rem 0;
 
           .menu-link {
-            padding: 2.4rem 1.2rem 1.5rem 1.2rem;
+            padding: 2.5rem 1.2rem;
             display: inline-flex;
             align-items: center;
             margin-left: 1rem;
@@ -109,11 +100,14 @@ header {
             color: $primary-color;
             border-radius: 0 0 0.5rem 0.5rem;
 
-            &:hover {
-              color: $secondary-color;
+            %active-state {
+              background: $secondary-color;
+              color: $white;
+              
             }
 
-            &.selected {
+            &.selected,
+            &:hover {
               background: $secondary-color;
               color: $white;
             }
@@ -299,7 +293,7 @@ header {
             }
           }
 
-          #close-modal {
+          [data-close-modal] {
             text-align: right;
 
             &::after {
