--- a/styles/index.css
+++ b/styles/index.css
@@ -1280,23 +1280,29 @@ main {
 }
 
 #about-us-section .svg-group .main-image {
-  background-image: url(/assets/home_banner_1.png);
+  background-image: url(/assets/svg4.png);
 }
 
 #about-us-section .svg-group .main-image .top-right {
-  background-image: url(/assets/update_image.png);
+  background-image: url(/assets/svg3.png);
 }
 
 #about-us-section .svg-group .main-image .bottom-right {
-  background-image: url(/assets/update_image.png);
+  background-image: url(/assets/svg2.png);
+}
+
+#about-us-section .right {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 #impact-section .svg-group .main-image {
-  background-image: url(/assets/banner.png);
+  background-image: url(/assets/svg1.png);
 }
 
 #impact-section .svg-group .main-image .top-right {
-  background-image: url(/assets/banner.png);
+  background-image: url(/assets/svg2.png);
 }
 
 #beneficiaries-section .beneficiaries-list {
@@ -1551,7 +1557,6 @@ main {
 }
 
 .svg-group .main-image .top-right, .svg-group .main-image .bottom-right, .svg-group .main-image {
-  border: 2px solid black;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
@@ -1582,8 +1587,8 @@ main {
 
 @media screen and (min-width: 760px) {
   .svg-group .main-image {
-    height: 20rem;
-    width: 20rem;
+    height: 21rem;
+    width: 21rem;
   }
   .svg-group .main-image .top-right {
     height: 12rem;
@@ -1596,6 +1601,13 @@ main {
     width: 10rem;
     bottom: -3rem;
     right: -3rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .svg-group .main-image {
+    height: 23rem;
+    width: 23rem;
   }
 }
 
