--- a/styles/index.scss
+++ b/styles/index.scss
@@ -243,6 +243,7 @@ main {
         img {
           height: 100%;
           width: 100%;
+          position: inherit;
         }
 
         .image-tag {
@@ -250,6 +251,7 @@ main {
           height: 4rem;
           border-radius: 50%;
           position: absolute;
+          background: $secondary-color;
         }
       }
 
